[package]
name = "gitosu"
description = "Track your osu! map changes using git!"
authors = ["stopperw"]
repository = "https://github.com/stopperw/gitosu"
license = "MIT"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
git2 = "0.20.0"
log = "0.4.25"
notify = "8.0.0"
owo-colors = "4.1.0"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
zip = "2.2.2"
